--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Este es el parrafo de inicio</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
         </div>
     </div>
 </body>
