--- a/blogpost.html
+++ b/blogpost.html
@@ -13,12 +13,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Este es el parrafo de inicio</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
+            <p>suscribete!!!!!</p>
         </div>
     </div>
 </body>
