--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
             <p>suscribete!!!!!</p>
         </div>
+        <div id="footer">Hecho por mi tambien! &lt;3 </div>
     </div>
 </body>
 
