--- a/blogpost.html
+++ b/blogpost.html
@@ -17,9 +17,9 @@
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
-            <p>Este es el parrafo de inicio</p>
+            <p>Este es el pàrrafo de inicio</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas.</p>
-            <p>suscribete!!!!!</p>
+            <p>suscrìbete!!!!!</p>
         </div>
         <div id="footer">Hecho por mi tambien! &lt;3 </div>
     </div>
